results/SpecGenBench/2-shot/log-CanConstruct-2023_11_05_22_53_41.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; count[i] >= 0));
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ assume (\forall int i; 0 <= i && i < 26; cnt[i] == 0);
        //@ maintaining 0 <= i && i <= magazine.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] >= 0);
        //@ decreases magazine.length() - i;
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining 0 <= i && i <= ransomNote.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; count[i] >= 0));
                                                                                                          ^
  symbol:   variable count
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:10: error: cannot find symbol
        //@ maintaining 0 <= i && i <= magazine.length();
                             ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:10: error: cannot find symbol
        //@ maintaining 0 <= i && i <= magazine.length();
                                  ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] >= 0);
                                                      ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:12: error: cannot find symbol
        //@ decreases magazine.length() - i;
                                          ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:16: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                             ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:16: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                                  ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] >= 0);
                                                      ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:18: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
9 errors

